--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AJAX",
+  "name": "Project",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,11 +10,9 @@
   "author": "Mrsalsa",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
-    "mongoose": "^5.6.11",
-    "nodemon": "^1.19.1",
-    "uuid": "^3.3.3"
+    "mysql": "^2.17.1",
+    "nodemon": "^1.19.1"
   }
 }
